--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
+
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -45,7 +46,7 @@
 								<property name="mbean_gen_dir" value="${mbean.generated.source.dir}" />
 								<property name="mbean_out_dir" value="${project.build.directory}/mbean-out" />
 								<property name="mjf_jar"
-									value="${build.directory}/${build.finalName}.jar" />
+									value="${project.build.directory}/${project.build.finalName}.jar" />
 
 								<!-- macro for MBeanMaker to generate intermediate files -->
 								<macrodef name="WebLogicMBeanMakerMDF">
@@ -161,147 +162,68 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-antrun-plugin
+										</artifactId>
+										<versionRange>
+											[1.3,)
+										</versionRange>
+										<goals>
+											<goal>run</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-
 	<dependencies>
 		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.mbean.maker</artifactId>
-			<version>1.5.0.0</version>
-			<scope>provided</scope>
+			<groupId>com.bea.weblogic1036</groupId>
+			<artifactId>weblogic.server.modules_10.3.6.0</artifactId>
+			<version>1036</version>
+
 		</dependency>
 		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.utils</artifactId>
-			<version>1.9.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.common.security.api</artifactId>
-			<version>1.0.0.0_6-1-0-0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
+			<groupId>com.bea.weblogic1036</groupId>
 			<artifactId>weblogic</artifactId>
-			<version>10.3.4.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.utils.classloaders</artifactId>
-			<version>1.9.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.management.core</artifactId>
-			<version>2.8.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.descriptor</artifactId>
-			<version>1.9.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.i18n</artifactId>
-			<version>1.8.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.weblogic.security.identity</artifactId>
-			<version>1.1.2.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.weblogic.security</artifactId>
-			<version>1.0.0.0_6-1-0-0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.utils.full</artifactId>
-			<version>1.9.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.logging</artifactId>
-			<version>1.8.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.weblogic.workmanager</artifactId>
-			<version>1.10.0.0</version>
-			<scope>provided</scope>
+			<version>1036</version>
+
 		</dependency>
 
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.beangen</artifactId>
-			<version>1.7.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.apache</artifactId>
-			<version>1.2.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.annogen</artifactId>
-			<version>1.3.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.xml.staxb.buildtime</artifactId>
-			<version>1.5.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.xml.staxb.runtime</artifactId>
-			<version>1.7.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.xml.beaxmlbeans</artifactId>
-			<version>2.3.0.0_2-5-1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.weblogic.stax</artifactId>
-			<version>1.9.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>weblogic</groupId>
-			<artifactId>com.bea.core.beaninfo</artifactId>
-			<version>2.4.0.0</version>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant-launcher</artifactId>
 			<version>1.7.1</version>
-			<scope>provided</scope>
+
 		</dependency>
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant</artifactId>
 			<version>1.7.1</version>
-			<scope>provided</scope>
+
 		</dependency>
 
 		<dependency>
@@ -312,4 +234,6 @@
 			<systemPath>${java.home}/../lib/tools.jar</systemPath>
 		</dependency>
 	</dependencies>
+
+
 </project>
