--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ryaltech.weblogic</groupId>
-	<artifactId>SampleSecurityProvider91</artifactId>
+	<artifactId>adauthenticator</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
-	<name>SampleSecurityProvider91</name>
-	<url>http://maven.apache.org</url>
+	<name>adauthenticator</name>	
 	<properties>
 		<mbean.generated.source.dir>${project.build.directory}/mbean-gen
 		</mbean.generated.source.dir>
@@ -88,10 +86,7 @@
 
 								<!-- Generate for all three providers -->
 
-								<WebLogicMBeanMakerMDF mdffile="SimpleSampleAuthenticator.xml" />
-								<WebLogicMBeanMakerMDF mdffile="SimpleSampleAuthorizer.xml" />
-								<WebLogicMBeanMakerMDF mdffile="SimpleSampleIdentityAsserter.xml" />
-								<WebLogicMBeanMakerMDF mdffile="SimpleSampleRoleMapper.xml" />
+								<WebLogicMBeanMakerMDF mdffile="SimplifiedADAuthenticatior.xml" />
 
 								<!-- Copy all sources and MDF generated files to one dir for MJF 
 									: -->
@@ -161,43 +156,21 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- to embed dependencies -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>			
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-antrun-plugin
-										</artifactId>
-										<versionRange>
-											[1.3,)
-										</versionRange>
-										<goals>
-											<goal>run</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 	<dependencies>
 		<dependency>
@@ -211,6 +184,12 @@
 			<artifactId>weblogic</artifactId>
 			<version>1036</version>
 
+		</dependency>
+		<dependency>
+			<groupId>org.forgerock.opendj</groupId>
+			<artifactId>opendj-ldap-sdk</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
